--- a/index.html
+++ b/index.html
@@ -1,43 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+<head><!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@400;500;700&display=swap" rel="stylesheet"> 
-    <!-- StyleSheet -->
-    <link rel="stylesheet" href="style.css">
-    <title>treva landing page</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mama Jollof - Authentic African Cuisine</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="header">
-        <nav class="nav">
-            <div class="nav__center container">
-                <div class="logo">
-                    <img src="./treva.svg" alt="">
-                </div>
-
-                <ul class="nav__list">
-                    <button class="btn nav__btn">Sign In</button>
-                    <button class="btn nav__btn signup">Sign Up</button>
-                </ul>
-            </div>
-        </nav>
-
-        <div class="hero">
-            <div class="content container">
-                <h1>Find Your Dream Job Here</h1>
-                <p>Filium morte multavit si sine dubio praeclara sunt, explicabo nemo enim ad minima. Probabo, inquit, modo ista sis aequitate, quam ob rem aperiam eaque gaudere ut.</p>
-                <div class="buttons">
-                    <button class="btn hero__btn hero__btn-blue">Hire</button>
-                    <button class="btn hero__btn">Work</button>
-                </div>
-            </div>
-
-            <div class="bottom__img">
-                <img src="./bg.svg" alt="">
-            </div>
-        </div>
-    </header>
+  <header>
+    <h1>Mama Jollof</h1>
+    <p>Authentic African Cuisine</p>
+  </header>
+  
+  <section class="about">
+    <h2>About Us</h2>
+    <p>Welcome to Mama Jollof, your ultimate destination for delicious African cuisine. Our mission is to bring the flavors of Africa to your table with our carefully crafted recipes and authentic ingredients.</p>
+  </section>
+  
+  <section class="menu">
+    <h2>Our Menu</h2>
+    <div class="menu-item">
+      <img src="jollof.jpg" alt="Jollof Rice">
+      <h3>Jollof Rice</h3>
+      <p>Our signature dish made with rice, tomatoes, onions, and a blend of African spices.</p>
+    </div>
+    <div class="menu-item">
+      <img src="suya.jpg" alt="Suya">
+      <h3>Suya</h3>
+      <p>Grilled skewered meat marinated in a spicy peanut sauce.</p>
+    </div>
+    <!-- Add more menu items as needed -->
+  </section>
+  
+  <section class="contact">
+    <h2>Contact Us</h2>
+    <p>For inquiries, reservations, or catering services, please contact us:</p>
+    <p>Email: info@mamajollof.com</p>
+    <p>Phone: 0765437673 </p>
+  </section>
+  
+  <footer>
+    <p>&copy; 2024 Mama Jollof. All rights reserved.</p>
+  </footer>
 </body>
 </html>
+   
